--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fariha Aktar</title>
+  <title>Khalid-Bin-Shofiq</title>
   <meta name="description" content="Urban & Regional Planner" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,82 +93,102 @@
     <!-- Hero / Header -->
     <header>
       <div class="avatar-section">
-        <img class="avatar" src="images/profile.jpg" alt="Fariha Aktar photo" />
+        <img class="avatar" src="images/profile.jpg" alt="Khalid-Bin-Shofiq photo" />
         <div>
-          <h1><strong>Fariha Aktar</strong></h1>
-          <p class="tagline">An aspiring Urban and Regional Planner with a focus on sustainable development, climate resilience, and the integration of geospatial technologies in urban planning.</p>
-          <p class="tagline">I hold a Bachelor’s degree in Urban and Regional Planning from the Bangladesh University of Engineering & Technology (BUET).</p>
-          <div class="contact">
-            <a href="mailto:aktarfariha1999@gmail.com">Email</a> ·
-            <a href="https://www.linkedin.com/in/fariha-aktar-378794187/" target="_blank" rel="noopener">LinkedIn</a>
-          </div>
+          <h1><strong>Khalid-Bin-Shofiq</strong></h1>
+          <p class="tagline">Urban & Regional Planner (BUET)</p>
         </div>
       </div>
     </header>
 
     <!-- Research Areas -->
     <section id="research-areas">
-      <h2>🔬 Research Areas</h2>
+      <h2>🎯 Research Areas</h2>
       <ul>
-        <li>Protected Areas & Urban Forest Conservation</li>
-        <li>Land Surface Temperature & Urban Heat Island Analysis</li>
-        <li>Urban Expansion & Growth in Developing Countries</li>
-        <li>Remote Sensing & Geo-AI Based Urban Solutions</li>
-        <li>Transit-Oriented Development (TOD)</li>
-        <li>Climate Change Adaptation</li>
+        <li>Deep learning & machine learning–based prediction models</li>
+        <li>Urban growth & land use forecasting</li>
+        <li>Transit-Oriented Development (TOD) potential</li>
+        <li>Remote sensing & environmental sustainability</li>
+        <li>Spatial analysis & land use planning</li>
+        <li>Qualitative & policy-oriented urban research</li>
       </ul>
     </section>
 
     <!-- Recent Projects -->
     <section id="recent-projects">
-      <h2>🧩 Recent Projects</h2>
+      <h2>💡 Recent Projects</h2>
       <div class="card">
         <ul>
-          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link" target="_blank" rel="noopener">3D Flood Simulation 🌊</a></li>
-          <li><a href="Research/lst/lst.html" target="_blank" rel="noopener">Land Surface Temperature (LST) Map 🏜️</a></li>
+          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">**3D Bangladesh Terrain and Bathymetry 🌍**</a></li>
+          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">**3D Flood Simulation 🌊**</a></li>
         </ul>
       </div>
+    </section>
+
+    <!-- Current Research -->
+    <section id="current-research">
+      <h2>📂 Current Research</h2>
+      <ul>
+        <li><a href="research/LULC_Prediction.md"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
+        <li><a href="research/regional.md"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
+      </ul>
     </section>
 
     <!-- Academic Projects -->
     <section id="academic-projects">
       <h2>📘 Academic Projects</h2>
       <ul>
-        <li><a href="Academic/Coastal.html">Climate Change Adaptation</a> ↗</li>
-        <li><a href="Academic/Participatory.html">Participatory Planning Studio</a> ↗</li>
-        <li><a href="Academic/Project/project.html">Project Planning Studio</a> ↗</li>
+        <li><a href="Academic/Participatory/Participatory.md">Participatory Planning Studio</a> ↗</li>
+        <li><a href="Academic/Project/Project.md">Project Planning Studio</a> ↗</li>
+        <li><a href="Academic/Transportation/Transportation.md">Transportation Planning Studio</a> ↗</li>
+        <li><a href="Academic/Regional/Regional.md">Regional Planning Studio</a> ↗</li>
+        <li><a href="Academic/Rural/Rural.md">Rural Planning Studio</a> ↗</li>
+        <li><a href="Academic/Program/Program.md">Programming Studio</a> ↗</li>
+        <li><a href="Academic/GIS/GIS.md">GIS and Remote Sensing Studio</a> ↗</li>
+        <li><a href="Academic/Urban/Urban.md">Urban Planning Studio</a> ↗</li>
+        <li><a href="Academic/Landscape/Landscape.md">Landscape Planning Studio</a> ↗</li>
+        <li><a href="Academic/Site/Site.md">Site and Area Planning Studio</a> ↗</li>
+        <li><a href="Academic/Social/Social.md">Social and Physical Surveys</a> ↗</li>
+        <li><a href="Academic/Carto/Carto.md">Cartography Workshop</a> ↗</li>
       </ul>
     </section>
 
-    <!-- Education Section -->
-    <section id="education">
-      <h2>🎓 Education</h2>
-      <div class="card">
-        <div style="display: flex; align-items: center;">
-          <img src="buet.png" alt="BUET Logo" style="width: 40px; margin-right: 15px;">
-          <div>
-            <h3>Bachelor of Urban and Regional Planning (BURP)</h3>
-            <p><a href="https://urp.buet.ac.bd/" target="_blank">Bangladesh University of Engineering & Technology (BUET)</a> · 🗓️ 2019–2024</p>
-            <p><strong>CGPA:</strong> 3.64/4.00</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Achievements -->
-    <section id="achievements">
-      <h2>🏆 Achievements</h2>
+    <!-- Professional Experience -->
+    <section id="professional-experience">
+      <h2>💼 Professional Experience</h2>
       <ul>
-        <li>🎤 Key Speaker at Planning Week 2024: Just Urban Transition</li>
-        <li>🥈 2nd Runner Up – EnvoFrame SDG Awareness Competition</li>
+        <li><a href="Job/sh.md"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
       </ul>
+    </section>
+
+    <!-- Tools & Platforms -->
+    <section id="tools-platforms">
+      <h2>🔧 Tools & Platforms</h2>
+      <p align="left">
+        <img src="https://img.shields.io/badge/ArcMap-4479A1?style=for-the-badge&logo=esri&logoColor=white" alt="ArcMap"/>
+        <img src="https://img.shields.io/badge/ArcGIS%20Pro-005C97?style=for-the-badge&logo=esri&logoColor=white" alt="ArcGIS Pro"/>
+        <img src="https://img.shields.io/badge/QGIS-589632?style=for-the-badge&logo=qgis&logoColor=white" alt="QGIS"/>
+        <img src="https://img.shields.io/badge/Google%20Colab-F9AB00?style=for-the-badge&logo=googlecolab&logoColor=black" alt="Google Colab"/>
+        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python"/>
+        <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" alt="TensorFlow"/>
+        <img src="https://img.shields.io/badge/Keras-D00000?style=for-the-badge&logo=keras&logoColor=white" alt="Keras"/>
+        <img src="https://img.shields.io/badge/Pandas-150458?style=for-the-badge&logo=pandas&logoColor=white" alt="Pandas"/>
+        <img src="https://img.shields.io/badge/Matplotlib-11557C?style=for-the-badge&logo=plotly&logoColor=white" alt="Matplotlib"/>
+        <img src="https://img.shields.io/badge/R%20Studio-75AADB?style=for-the-badge&logo=rstudio&logoColor=white" alt="R Studio"/>
+      </p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2>📫 Contact</h2>
+      <p>📧 Email: khalidbinshofiq29@gmail.com</p>
+      <p>🔗 LinkedIn Profile: <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BEfNHAFBMSN2BVzuA90HUcA%3D%3D">View LinkedIn</a></p>
     </section>
 
     <footer class="footer">
-      © <span id="y"></span> Fariha Aktar · <a href="https://github.com/FARIHA1999">GitHub</a> · <a href="https://www.linkedin.com/in/fariha-aktar-378794187/" target="_blank" rel="noopener">LinkedIn</a>
+      © <span id="y"></span> Khalid-Bin-Shofiq · <a href="https://github.com/Khalid-Bin-Shofiq">GitHub</a>
     </footer>
   </div>
   <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
 </body>
 </html>
-
