--- a/index.html
+++ b/index.html
@@ -29,16 +29,22 @@
     a{color:var(--link); text-decoration:none}
     a:hover{text-decoration:underline}
     header{
-      display:flex; justify-content:space-between; align-items:center; margin-bottom:40px;
+      display:flex; justify-content:flex-start; align-items:center; margin-bottom:40px;
       background-color: var(--highlight); padding:20px; border-radius:10px;
     }
     .avatar{
-      width:150px; height:150px; border-radius:50%; object-fit:cover; border:3px solid #fff;
+      width:180px; height:180px; border-radius:50%; object-fit:cover; border:3px solid #fff;
       box-shadow:0 0 0 2px var(--border), 0 6px 18px rgba(0,0,0,.12);
+      margin-right: 30px;
     }
     h1{font-size:36px; color: white; margin:0;}
     .tagline{margin-top:8px; font-size:18px; color: white; font-style:italic;}
     .contact a{color:white; margin-right:15px; font-weight:bold;}
+    .description{
+      font-size: 16px;
+      color: white;
+      margin-top: 10px;
+    }
     .tabs {
       display: flex;
       justify-content: center;
@@ -123,6 +129,9 @@
         <p class="contact">
           <a href="mailto:khalidbinshofiq29@gmail.com">Email</a> ·
           <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b" target="_blank">LinkedIn</a>
+        </p>
+        <p class="description">
+          Urban and Regional Planning graduate with experience in empirical and spatial analysis. Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
         </p>
       </div>
     </header>
