--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --border:#BDC3C7;
       --pill:#D5DBDB;
       --background:#F4F6F6;
-      --highlight:#3498DB;
+      --highlight:#000000; /* Changed highlight color to black */
     }
     *{box-sizing:border-box}
     body{
@@ -33,7 +33,7 @@
       background-color: var(--highlight); padding:20px; border-radius:10px;
     }
     .avatar{
-      width:180px; height:180px; border-radius:50%; object-fit:cover; border:3px solid #fff;
+      width:180px; height:180px; border-radius:5%; object-fit:cover; border:3px solid #fff; /* Changed to a square with slightly rounded corners */
       box-shadow:0 0 0 2px var(--border), 0 6px 18px rgba(0,0,0,.12);
       margin-right: 30px;
     }
