--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       --border:#BDC3C7;
       --pill:#D5DBDB;
       --background:#F4F6F6;
-      --highlight:#000000; /* Changed highlight color to black */
+      --highlight:#000000; /* Highlight color set to black */
     }
     *{box-sizing:border-box}
     body{
@@ -33,8 +33,8 @@
       background-color: var(--highlight); padding:20px; border-radius:10px;
     }
     .avatar{
-      width:180px; height:180px; border-radius:5%; object-fit:cover; border:3px solid #fff; /* Changed to a square with slightly rounded corners */
-      box-shadow:0 0 0 2px var(--border), 0 6px 18px rgba(0,0,0,.12);
+      width:180px; height:180px; border-radius:50%; object-fit:cover; /* Perfect circle with no border */
+      box-shadow:0 6px 18px rgba(0,0,0,.12); /* Subtle shadow effect */
       margin-right: 30px;
     }
     h1{font-size:36px; color: white; margin:0;}
@@ -125,7 +125,7 @@
       <img class="avatar" src="images/profile.jpg" alt="Khalid-Bin-Shofiq photo" />
       <div>
         <h1><strong>Khalid-Bin-Shofiq</strong></h1>
-        <p class="tagline">Urban & Regional Planner (BUET)</p>
+        <p class="tagline">Urban & Regional Planner</p>
         <p class="contact">
           <a href="mailto:khalidbinshofiq29@gmail.com">Email</a> ·
           <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b" target="_blank">LinkedIn</a>
