--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
     }
     h1{font-size:36px; color: white; margin:0;}
     .tagline{margin-top:8px; font-size:18px; color: white; font-style:italic;}
-    .contact a{color:white; margin-right:15px; font-weight:bold;}
     .description{
+      font-size: 16px;
+      color: white;
+      margin-top: 10px;
+    }
+    .address{
       font-size: 16px;
       color: white;
       margin-top: 10px;
@@ -117,7 +121,7 @@
       <a href="#academic-projects" class="tab-link">Academic Projects</a>
       <a href="#education" class="tab-link">Education</a>
       <a href="#professional-experience" class="tab-link">Professional Experience</a>
-      <a href="#achievements" class="tab-link">Achievements</a>
+      <a href="#contact" class="tab-link">Contact</a> <!-- New Contact tab -->
     </div>
 
     <!-- Hero / Header -->
@@ -125,13 +129,12 @@
       <img class="avatar" src="images/profile.jpg" alt="Khalid-Bin-Shofiq photo" />
       <div>
         <h1><strong>Khalid-Bin-Shofiq</strong></h1>
-        <p class="tagline">Urban & Regional Planner</p>
-        <p class="contact">
-          <a href="mailto:khalidbinshofiq29@gmail.com">Email</a> ·
-          <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b" target="_blank">LinkedIn</a>
-        </p>
+        <p class="tagline">Urban & Regional Planner (BUET)</p>
         <p class="description">
           Urban and Regional Planning graduate with experience in empirical and spatial analysis. Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
+        </p>
+        <p class="address">
+          Address: Your Full Address, City, Country
         </p>
       </div>
     </header>
@@ -185,6 +188,15 @@
       <ul>
         <li><a href="Job/sh.md"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
       </ul>
+    </section>
+
+    <!-- Contact Section (Email, LinkedIn) -->
+    <section id="contact">
+      <h2>📬 Contact</h2>
+      <p>
+        <strong>Email:</strong> <a href="mailto:khalidbinshofiq29@gmail.com">khalidbinshofiq29@gmail.com</a><br />
+        <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b" target="_blank">Khalid-Bin-Shofiq</a>
+      </p>
     </section>
 
     <!-- Footer -->
