--- a/index.html
+++ b/index.html
@@ -129,13 +129,11 @@
       <img class="avatar" src="images/profile.jpg" alt="Khalid-Bin-Shofiq photo" />
       <div>
         <h1><strong>Khalid-Bin-Shofiq</strong></h1>
-        <p class="tagline">Urban & Regional Planner (BUET)</p>
+        <p class="tagline"><b>Urban & Regional Planner</b></p>
         <p class="description">
           Urban and Regional Planning graduate with experience in empirical and spatial analysis. Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
         </p>
-        <p class="address">
-          Address: Your Full Address, City, Country
-        </p>
+      
       </div>
     </header>
 
