--- a/index.html
+++ b/index.html
@@ -170,15 +170,23 @@
       </ul>
     </section>
 
-    <!-- Academic Projects -->
     <section id="academic-projects">
-      <h2>📘 Academic Projects</h2>
-      <ul>
-        <li><a href="Academic/Participatory/Participatory.md">Participatory Planning Studio</a> ↗</li>
-        <li><a href="Academic/Project/Project.md">Project Planning Studio</a> ↗</li>
-        <li><a href="Academic/Transportation/Transportation.md">Transportation Planning Studio</a> ↗</li>
-      </ul>
-    </section>
+  <h2>📘 Academic Projects</h2>
+  <ul>
+    <li><a href="Academic/Participatory/Participatory.md">Participatory Planning Studio</a> ↗</li>
+    <li><a href="Academic/Project/Project.md">Project Planning Studio</a> ↗</li>
+    <li><a href="Academic/Transportation/Transportation.md">Transportation Planning Studio</a> ↗</li>
+    <li><a href="Academic/Regional/Regional.md">Regional Planning Studio</a> ↗</li>
+    <li><a href="Academic/Rural/Rural.md">Rural Planning Studio</a> ↗</li>
+    <li><a href="Academic/Program/Program.md">Programming Studio</a> ↗</li>
+    <li><a href="Academic/GIS/GIS.md">GIS and Remote Sensing Studio</a> ↗</li>
+    <li><a href="Academic/Urban/Urban.md">Urban Planning Studio</a> ↗</li>
+    <li><a href="Academic/Landscape/Landscape.md">Landscape Planning Studio</a> ↗</li>
+    <li><a href="Academic/Site/Site.md">Site and Area Planning Studio</a> ↗</li>
+    <li><a href="Academic/Social/Social.md">Social and Physical Surveys</a> ↗</li>
+    <li><a href="Academic/Carto/Carto.md">Cartography Workshop</a> ↗</li>
+  </ul>
+</section>
 
     <!-- Professional Experience -->
     <section id="professional-experience">
