--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <a href="#research-areas" class="tab-link">Research</a>
       <a href="#academic-projects" class="tab-link">Academic Projects</a>
       <a href="#education" class="tab-link">Education</a>
-      <a href="#professional-experience" class="tab-link">Professional Experience</a>
+      <a href="#professional-experience" class="tab-link">Experience</a>
       <a href="#contact" class="tab-link">Contact</a> <!-- New Contact tab -->
     </div>
 
