--- a/index.html
+++ b/index.html
@@ -165,26 +165,26 @@
     <section id="current-research">
       <h2>📂 Current Research</h2>
       <ul>
-        <li><a href="research/LULC_Prediction.md"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
-        <li><a href="research/regional.md"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
+        <li><a href="research/LULC_Prediction.html"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
+        <li><a href="research/regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
       </ul>
     </section>
 
     <section id="academic-projects">
   <h2>📘 Academic Projects</h2>
   <ul>
-    <li><a href="Academic/Participatory/Participatory.md">Participatory Planning Studio</a> ↗</li>
-    <li><a href="Academic/Project/Project.md">Project Planning Studio</a> ↗</li>
-    <li><a href="Academic/Transportation/Transportation.md">Transportation Planning Studio</a> ↗</li>
-    <li><a href="Academic/Regional/Regional.md">Regional Planning Studio</a> ↗</li>
-    <li><a href="Academic/Rural/Rural.md">Rural Planning Studio</a> ↗</li>
-    <li><a href="Academic/Program/Program.md">Programming Studio</a> ↗</li>
-    <li><a href="Academic/GIS/GIS.md">GIS and Remote Sensing Studio</a> ↗</li>
-    <li><a href="Academic/Urban/Urban.md">Urban Planning Studio</a> ↗</li>
-    <li><a href="Academic/Landscape/Landscape.md">Landscape Planning Studio</a> ↗</li>
-    <li><a href="Academic/Site/Site.md">Site and Area Planning Studio</a> ↗</li>
-    <li><a href="Academic/Social/Social.md">Social and Physical Surveys</a> ↗</li>
-    <li><a href="Academic/Carto/Carto.md">Cartography Workshop</a> ↗</li>
+    <li><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a> ↗</li>
+    <li><a href="Academic/Project/Project.html">Project Planning Studio</a> ↗</li>
+    <li><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a> ↗</li>
+    <li><a href="Academic/Regional/Regional.html">Regional Planning Studio</a> ↗</li>
+    <li><a href="Academic/Rural/Rural.html">Rural Planning Studio</a> ↗</li>
+    <li><a href="Academic/Program/Program.html">Programming Studio</a> ↗</li>
+    <li><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a> ↗</li>
+    <li><a href="Academic/Urban/Urban.html">Urban Planning Studio</a> ↗</li>
+    <li><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a> ↗</li>
+    <li><a href="Academic/Site/Site.html">Site and Area Planning Studio</a> ↗</li>
+    <li><a href="Academic/Social/Social.html">Social and Physical Surveys</a> ↗</li>
+    <li><a href="Academic/Carto/Carto.html">Cartography Workshop</a> ↗</li>
   </ul>
 </section>
 
@@ -192,7 +192,7 @@
     <section id="professional-experience">
       <h2>💼 Professional Experience</h2>
       <ul>
-        <li><a href="Job/sh.md"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
+        <li><a href="Job/sh.html"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
       </ul>
     </section>
 
