--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
         <p class="description">
           Urban and Regional Planning graduate with experience in empirical and spatial analysis. Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
         </p>
-      
       </div>
     </header>
 
@@ -170,23 +169,52 @@
       </ul>
     </section>
 
+      <!-- Academic Projects -->
     <section id="academic-projects">
-  <h2>📘 Academic Projects</h2>
-  <ul>
-    <li><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a> ↗</li>
-    <li><a href="Academic/Project/Project.html">Project Planning Studio</a> ↗</li>
-    <li><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a> ↗</li>
-    <li><a href="Academic/Regional/Regional.html">Regional Planning Studio</a> ↗</li>
-    <li><a href="Academic/Rural/Rural.html">Rural Planning Studio</a> ↗</li>
-    <li><a href="Academic/Program/Program.html">Programming Studio</a> ↗</li>
-    <li><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a> ↗</li>
-    <li><a href="Academic/Urban/Urban.html">Urban Planning Studio</a> ↗</li>
-    <li><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a> ↗</li>
-    <li><a href="Academic/Site/Site.html">Site and Area Planning Studio</a> ↗</li>
-    <li><a href="Academic/Social/Social.html">Social and Physical Surveys</a> ↗</li>
-    <li><a href="Academic/Carto/Carto.html">Cartography Workshop</a> ↗</li>
-  </ul>
-</section>
+      <h2>📘 Academic Projects</h2>
+      <ul>
+        <li><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a> ↗</li>
+        <li><a href="Academic/Project/Project.html">Project Planning Studio</a> ↗</li>
+        <li><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a> ↗</li>
+        <li><a href="Academic/Regional/Regional.html">Regional Planning Studio</a> ↗</li>
+        <li><a href="Academic/Rural/Rural.html">Rural Planning Studio</a> ↗</li>
+        <li><a href="Academic/Program/Program.html">Programming Studio</a> ↗</li>
+        <li><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a> ↗</li>
+        <li><a href="Academic/Urban/Urban.html">Urban Planning Studio</a> ↗</li>
+        <li><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a> ↗</li>
+        <li><a href="Academic/Site/Site.html">Site and Area Planning Studio</a> ↗</li>
+        <li><a href="Academic/Social/Social.html">Social and Physical Surveys</a> ↗</li>
+        <li><a href="Academic/Carto/Carto.html">Cartography Workshop</a> ↗</li>
+      </ul>
+    </section>
+
+    
+    <!-- Education Section -->
+    <section id="education">
+      <h2>🎓 Education</h2>
+      <ul>
+        <li>
+          <b>Bachelor of Urban and Regional Planning (BURP)</b> — 
+          <img src="images/buet-logo.png" alt="BUET Logo" style="width: 40px; vertical-align: middle;" />
+          Bangladesh University of Engineering &amp; Technology (BUET) · 🗓️ 2019–2024
+          <br /><b>CGPA: 3.61/4.00</b>
+        </li>
+        <li>
+          <b>Higher Secondary Certificate (General Scholarship)</b> — 
+          <img src="images/rajshahi-college-logo.png" alt="Rajshahi College Logo" style="width: 40px; vertical-align: middle;" />
+          Rajshahi College, Rajshahi, Bangladesh · 🗓️ 2016–2018
+          <br /><b>GPA: 5.00/5.00</b>
+        </li>
+        <li>
+          <b>Secondary School Certificate (General Scholarship)</b> — 
+          <img src="images/shiroil-logo.png" alt="Shiroil Government High School Logo" style="width: 40px; vertical-align: middle;" />
+          Shiroil Government High School, Rajshahi, Bangladesh · 🗓️ 2014–2016
+          <br /><b>GPA: 5.00/5.00</b>
+        </li>
+      </ul>
+    </section>
+
+  
 
     <!-- Professional Experience -->
     <section id="professional-experience">
